testsuite/good/ImmutableType.flux
immutable type ImmutableType {

}
attributes{
    int a = 5;
    int b = 200;
}