testsuite/bad/ImmutableTypeVarFields.flux
immutable type ImmutableTypeVarFields{

}
attributes
{
   int a = 5;
   var int b = 6;
}